added register button css

--- a/data/css/login.css
+++ b/data/css/login.css
@@ -76,12 +76,20 @@ body {
     }
 
     a {
-                display: block;
-                margin-top: 20px;
-                color: #2575fc;
-                text-decoration: none;
-            }
+        display: inline;
+        margin-top: 20px;
+        color: #2575fc;
+        text-decoration: none;
+    }
 
-            a:hover {
-                text-decoration: underline;
-            }
+    a:hover {
+        text-decoration: underline;
+    }
+
+    p {
+        display: inline;
+    }
+
+    .btn{
+        margin-top: 20px;
+    }
