--- a/data/template/root.html
+++ b/data/template/root.html
@@ -3,16 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Root</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/root.css">
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/books">Главная страница</a>
-        </div>
-    </nav>
+    <div class="welcome-container">
+        <h1>Добро пожаловать в Mbook!</h1>
+    </div>
+    <ul class="nav justify-content-end">
+        <li class="nav-item m-2">
+            <a class="btn btn-primary" href="/books" role="button">Список Книг</a>
+        </li>
+        <li class="nav-item m-2">
+            <a class="btn btn-primary" href="/employees" role="button">Список сотрудников</a>
+        </li>
+        <li class="nav-item m-2">
+            <a class="btn btn-primary" href="/login" role="button">Войти</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container rules-container">
+    <details>
+        <summary>Список правил</summary>
+        <ul>
+            <li>Книги могут брать только авторизованные сотрудники</li>
+            <li>Всегда записывайтесь в журнал о выдаче и возврате книг</li>
+            <li>Будьте вежливы и уважительны к другим пользователям</li>
+            <li>Не больше двух книг в одни руки</li>
+            <li>Своевременно возвращать книги</li>
+        </ul>
+    </details>
 </div>
 </body>
 </html>
