--- a/data/css/book.css
+++ b/data/css/book.css
@@ -1,6 +1,7 @@
 body {
             font-family: Arial, sans-serif;
             background: white;
+            background: url('/images/booklander.jpg') no-repeat center center/cover;
             padding: 0;
             margin: 0;
             display: flex;
@@ -32,17 +33,21 @@ body {
             padding: 8px 12px;
         }
 
+        .navbar ul li a:hover {
+            background: #555;
+            border-radius: 5px;
+        }
+
         .book-container {
             background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
             max-width: 800px;
             margin-top: 100px;
         }
 
         .book-header {
-            background: rgba(255, 255, 255, 0.9);
             padding: 10px;
             font-size: 20px;
             font-weight: bold;
