--- a/data/css/books.css
+++ b/data/css/books.css
@@ -1,6 +1,7 @@
 body {
             font-family: Arial, sans-serif;
             background: white;
+            background: url('/images/pex.jpg') no-repeat center center/cover;
             margin: 0;
             padding: 0;
             display: flex;
@@ -118,4 +119,26 @@ body {
             font-size: 18px;
             color: #555;
             margin-bottom: 10px;
+        }
+
+        .card-header {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            margin-top: 120px;
+        }
+
+        .footer {
+                background: #333;
+                color: white;
+                text-align: center;
+                padding: 15px;
+                margin-top: 30px;
+                position: relative;
+                width: 100%;
+        }
+        .footer-content p {
+                margin: 5px 0;
+                font-size: 14px;
         }
