--- a/data/css/employees.css
+++ b/data/css/employees.css
@@ -1,6 +1,7 @@
-body {
+        body {
             font-family: 'Arial', sans-serif;
             background: white;
+            background: url('/images/pex2.jpg') no-repeat center center/cover;
             margin: 0;
             padding: 0;
             display: flex;
@@ -59,7 +60,7 @@ body {
             background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
             display: flex;
             flex-direction: column;
             gap: 15px;
@@ -86,7 +87,11 @@ body {
         }
 
         .employee-container-header {
-            margin-top: 100px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            margin-top: 120px;
         }
 
         .employee-link {
@@ -103,4 +108,18 @@ body {
 
         .employee-link:hover {
             background-color: #1e60d2;
+        }
+
+        .footer {
+                        background: #333;
+                        color: white;
+                        text-align: center;
+                        padding: 15px;
+                        margin-top: 30px;
+                        position: relative;
+                        width: 100%;
+        }
+        .footer-content p {
+                        margin: 5px 0;
+                        font-size: 14px;
         }
