Added a button to call the log

--- a/data/template/root.html
+++ b/data/template/root.html
@@ -18,6 +18,9 @@
             <a class="btn btn-primary" href="/employees" role="button">Список сотрудников</a>
         </li>
         <li class="nav-item m-2">
+            <a class="btn btn-primary" href="/log" role="button">Журнал</a>
+        </li>
+        <li class="nav-item m-2">
             <a class="btn btn-primary" href="/login" role="button">Войти</a>
         </li>
     </ul>
