made a mistake about receiving 3 books

--- a/data/css/book.css
+++ b/data/css/book.css
@@ -93,3 +93,7 @@ body {
         .back-link:hover {
             background-color: #1e60d2;
         }
+
+        .error-message {
+        color: red;
+        }
