--- a/data/css/log.css
+++ b/data/css/log.css
@@ -51,7 +51,7 @@ body {
     flex-direction: column;
     gap: 15px;
     max-width: 1000px;
-    margin: 120px auto 0;
+    margin: 120px;
     padding-top: 20px;
 }
 
