--- a/data/css/book.css
+++ b/data/css/book.css
@@ -102,3 +102,14 @@ body {
         color: green;
         padding: 10px;
         }
+
+        .auth-message {
+            display: inline-block;
+            padding: 10px 15px;
+            background: #2575fc;
+            color: white;
+            border-radius: 15px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
